--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h1 {
         display: block;
         width: 300px;
         height: 50px;
-        background: url("./assets/logo.png") no-repeat;
+        background: url("../assets/logo.png") no-repeat;
         background-size: contain;
 }
 a {
