--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,6 @@ footer .col{
     left: 0;
   }
 }
-  #footer{ position: fixed; right: 100px; bottom: 100px; display: block; width: 300px; height: 50px; }
+  #footer{ position: fixed; right: 100px; bottom: 100px; display: block; height: 50px; }
   #footer a { margin-left: 20px; }
 
